# IPC

./: .gitignore  IPC.sln
.github/workflows/: dotnet.yml
CSocketComm/: Makefile  cmd.c  cmd.h  main.c  pingpong.c  scomm.c  scomm.h  simpleConversion.c  simpleConversion.h
JSocketComm/: BuildJar.sh
JSocketComm/src/: Cmd.java  FPipe.java  Main.java  Pingpong.java  PipeCmdException.java  SimpleConversion.java
JSocketComm/src/JSocketComm/: Cmd.java  FPipe.java  PipeCmdException.java  SimpleConversion.java
SocketComm/: Cmd.cs  FPipe.cs  PipeCmdException.cs  SimpleConversion.cs  SocketComm.csproj  nuget.config
SocketComm.Client/: Program.cs  SocketComm.Client.csproj
SocketComm.Examples/: CMakeLists.txt  Program.cs
SocketComm.Examples/RunMethod/: Client.cs  Client.java  Server.cs  Server.java  client.c  server.c
SocketComm.Examples/SendArray/: OneDClient.c  OneDClient.cs  OneDClient.java  OneDServer.c  OneDServer.cs  OneDServer.java  TwoDClient.c  TwoDClient.cs  TwoDClient.java  TwoDServer.c  TwoDServer.cs  TwoDServer.java
SocketComm.Examples/SendValue/: FloatClient.c  FloatClient.cs  FloatClient.java  FloatServer.c  FloatServer.cs  FloatServer.java  IntClient.c  IntClient.cs  IntClient.java  IntServer.c  IntServer.cs  IntServer.java
SocketComm.PingPong/: Program.cs  SocketComm.PingPong.csproj
